--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 #change default mapping from /graphql to custom
 graphql.servlet.mapping=/patcyy-graphql
+
+### H2 database ###
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=patcyy
+spring.datasource.password=patcyy1234
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+#will not use hibernate automatic schema creation but will use schema.sql and data.sql
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.schema=classpath*:/database/schema.sql
+spring.datasource.data=classpath*:/database/data.sql
