--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.schema=classpath*:/database/schema.sql
 spring.datasource.data=classpath*:/database/data.sql
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
